fix layout issues

--- a/public/home.css
+++ b/public/home.css
@@ -3,19 +3,25 @@ body{
   height: 100vh;
   padding: 0;
   margin: 0;
+  position: relative;
 }
 nav{
-  height: 13%;
+  height: 90px;
   background-color: #00AF84;
+  position: relative;
 }
 .container{
-  position:relative;
+  position:fixed;
   height: 83%;
+  margin-left: 100px;
+
 }
 .forms{
   float: right;
-  position: relative;
-  top:-590px;
+  position: fixed;
+  /*margin-top: 110px;*/
+  top: 112px;
+  left: 700px;
   opacity: 1;
 }
 .f1{
@@ -32,6 +38,7 @@ nav{
   text-shadow: 2px 2px 6px white;
   opacity: 1;
   padding: 10px;
+  margin-left: 103px;
 }
 .inReg{
   width: 250px;
@@ -41,11 +48,14 @@ nav{
   background-size:100% 100%;
   background-repeat: no-repeat;
   height: 100%;
-  margin-top: 10px;
+  margin: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   -webkit-filter: blur(6px);
 }
 .overlay2{
-  position: absolute;
+  position: relative;
   background-color: red;
   width: 100%;
   height: 100%;
@@ -64,8 +74,8 @@ nav{
   margin-top: -20px;
 }
 #logout{
-  position: absolute;
-  top:-70px;
+  position: fixed;
+  top:25px;
   left:1000px;
 }
 #welcome{
@@ -92,3 +102,9 @@ nav{
   from{transform: rotate(0deg)}
   to{ transform: rotate(360deg)}
 }
+#feedback{
+  width: 250px;
+  margin: 30px auto;
+  display: none;
+}
+#
